--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
+    <title>Drone Zone</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <header class="header">
 
+    </header>
+    <div>
+        XXXX <br> XXX
+    </div>
 </body>
 
 </html>
