Add background image

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <header class="header">
 
+        <img src="img/header_bg.jpg" alt="Header Background" class="header__bg">
     </header>
     <div>
         XXXX <br> XXX
