--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body>
     <header class="header">
+        <div class="header__nav">
 
+        </div>
         <img src="img/header_bg.jpg" alt="Header Background" class="header__bg">
     </header>
-    <div>
-        XXXX <br> XXX
-    </div>
+
 </body>
 
 </html>
